# kmldpc

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
cmake/Modules/: Findmatio.cmake
config/: 2bits_4PSK.txt  2bits_QPSK.txt  4bit_16QAM_Gray.txt  4bit_16QAM_phi1.txt  4bit_16QAM_phi2.txt  5GLDPCBG2a3_R12_K960.txt  6bits_64QAM_Gray.txt  LDPC.txt  PEG2304regular0.5.txt  PEG8064regular0.5.txt  Setup_of_Codec.txt  Setup_of_LDPC_Linear_System0.txt  Setup_of_Modem.txt  config.toml
kmldpc/: CMakeLists.txt  kmldpc.cpp
kmldpc/include/: Binary5GLDPCCodec.h  BinaryLDPCCodec.h  KMeans.h  LinearSystem.h  Log.h  Mat.h  SourceSink.h  XorSegCodec.h  binary5gldpccodec.h  binaryldpccodec.h  kmcodec.h  kmeans.h  ldpc_linear_system.h  ldpclinearsystem.h  linear_system.h  linearsystem.h  log.h  mat.h  modem.h  modem_linear_system.h  modemlinearsystem.h  randnum.h  simulator.h  skmeans.h  source_sink.h  sourcesink.h  utility.h  xorseg_codec.h  xorsegcodec.h
kmldpc/lab/: CMakeLists.txt
kmldpc/lab/src/: binary5gldpccodec.hpp  binaryldpccodec.hpp  linearsystem.hpp  log.hpp  mat.hpp  modem.hpp  modemlinearsystem.hpp  randnum.hpp  sourcesink.hpp  utility.hpp  xorsegcodec.hpp
kmldpc/lib/: CMakeLists.txt
kmldpc/lib/lab/: binary5gldpccodec.cc  binary5gldpccodec.hpp  binaryldpccodec.hpp  linearsystem.cc  linearsystem.h  linearsystem.hpp  log.cc  log.h  mat.cc  mat.h  modem.hpp  modemlinearsystem.cc  modemlinearsystem.hpp  randnum.h  sourcesink.cc  sourcesink.h  utility.cc  utility.h  xorsegcodec.hpp
kmldpc/lib/lab/include/: binary5gldpccodec.h  binaryldpccodec.h  join_threads.h  linearsystem.h  log.h  mat.h  modem.h  modemlinearsystem.h  randnum.h  sourcesink.h  thread_pool.h  threadsafe_queue.h  threadsafe_sourcesink.h  utility.h  xorsegcodec.h
kmldpc/lib/lab/src/: binary5gldpccodec.cc  binaryldpccodec.cc  linearsystem.cc  log.cc  mat.cc  modem.cc  modemlinearsystem.cc  randnum.cc  sourcesink.cc  threadsafe_sourcesink.cc  utility.cc  xorsegcodec.cc
kmldpc/src/: Binary5GLDPCCodec.cpp  BinaryLDPCCodec.cpp  CMakeLists.txt  KMeans.cpp  LDPCLinearSystem.cpp  LinearSystem.cpp  Log.cpp  Mat.cpp  Modem.cpp  ModemLinearSystem.cpp  RandNum.cpp  SourceSink.cpp  Utility.cpp  XorSegCodec.cpp  binary5gldpccodec.cc  binary5gldpccodec.cpp  binary_ldpc_codec.cpp  binary_ldpc_codec.h  binaryldpccodec.cc  binaryldpccodec.cpp  kmcodec.cc  kmeans.cc  kmeans.cpp  ldpc_linear_system.cpp  ldpc_linear_system.h  ldpclinearsystem.cc  ldpclinearsystem.cpp  linear_system.cpp  linear_system.h  linearsystem.cc  linearsystem.cpp  log.cc  log.cpp  mat.cc  mat.cpp  modem.cc  modem.cpp  modem.h  modem_linear_system.cpp  modem_linear_system.h  (+20 more)
